--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/logo-drk.png" />
+    <link rel="icon" type="image/png" href="images/logo-drk.png">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Newer Company Inc.</title>
@@ -27,7 +27,7 @@
       </div>
 
       <div class="about-image" id="about">
-        <img src="images/about.jpg" alt=""/>
+        <img src="images/about.jpg" alt="People seated at a wooden table, writing in notebooks during a daytime workshop or meeting, with sunlight illuminating their hands and the table surface."/>
       </div>
       
       <div class="about text-block">
@@ -36,7 +36,7 @@
       </div>
 
       <div class="method-image" id="method">
-        <img src="images/method.jpg" alt=""/>
+        <img src="images/method.jpg" alt="Overhead view of a person's hands writing in a planner on a wooden desk, surrounded by a book, eyeglasses, instant photos, and a tablet."/>
       </div>
 
       <div class="method text-block">
@@ -46,7 +46,7 @@
       </div>
 
       <div class="clients-image" id="clients">
-        <img src="images/clients.jpg" alt=""/>
+        <img src="images/clients.jpg" alt="Three people at a cafe table with various items including a laptop, coffee cups, and a notebook, engaged in discussion or work."/>
       </div>
 
       <div class="clients text-block">
@@ -55,7 +55,7 @@
       </div>
 
       <div class="contact-image" id="contact">
-        <img src="images/contact.jpg" alt =""/>
+        <img src="images/contact.jpg" alt ="A man in a dark shirt smiling and talking on a mobile phone, standing against a textured grey wall with a round mirror and a wooden beam to his side."/>
       </div>
 
       <div class="contact text-block">
@@ -64,7 +64,7 @@
       </div>
   </main>
     <footer>
-      <p>University of Michigan School of Information <br/>
+      <p>University of Michigan School of Information <br>
         &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>
     </footer>
   </body>
